# SCMG

./: README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  usage.rst
docs/source/tutorials/: conditioned_generation_of_cell_states.ipynb  index.rst  predict_causal_genes_for_cell_state_transitions.ipynb  project_single_cell_states_onto_the_global_cell_state_manifold.ipynb  zero-shot_integration_of_scRNA-seq_datasets.ipynb
scmg/data/: standard_genes.csv
scmg/data/gene_names/: human_genes.csv  mouse_genes.csv  orthologue_map_human2mouse_best.csv  orthologue_map_human2mouse_unique.csv  orthologue_map_mouse2human_best.csv
scmg/model/: basic.py  causal_prediction.py  cell_type_search.py  contrastive_embedding.py  manifold_generation.py
scmg/preprocessing/: data_standardization.py
