[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scmg"
authors = [{name = "Xingjie Pan"}]
version = "0.1.0"
description = "Single cell manifold generator"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "pandas==1.5.3",
    "scanpy==1.10.4",
    "torch==2.3.1", 
    'datasets==2.20.0',
]
